@@ -1,0 +1,85 @@
+/*
+ * Copyright 2014 Midhun Harikumar
+ * 
+ * Licensed under the Apache License, Version 2.0 (the "License");
+ * you may not use this file except in compliance with the License.
+ * You may obtain a copy of the License at
+ * 
+ * http://www.apache.org/licenses/LICENSE-2.0
+ * 
+ * Unless required by applicable law or agreed to in writing, software
+ * distributed under the License is distributed on an "AS IS" BASIS,
+ * WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
+ * See the License for the specific language governing permissions and
+ * limitations under the License.
+ */
+
+package com.ae.apps.pnrstatus.utils;
+
+import android.util.Log;
+
+/**
+ * Logger is a wrapper over the android default logger. It will log messages only if IS_DEV_MODE is set as true
+ * 
+ * @author Midhun
+ * 
+ */
+public class Logger {
+
+	/**
+	 * logs a debug entry if we are in developer mode
+	 * 
+	 * @param tag
+	 * @param msg
+	 * @return
+	 */
+	public static int d(String tag, String msg) {
+		if (AppConstants.IS_DEV_MODE) {
+			return Log.d(tag, msg);
+		}
+		return 0;
+	}
+
+	/**
+	 * logs an error entry if we are in developer mode
+	 * 
+	 * @param tag
+	 * @param msg
+	 * @return
+	 */
+	public static int e(String tag, String msg) {
+		if (AppConstants.IS_DEV_MODE) {
+			return Log.e(tag, msg);
+		}
+		return 0;
+	}
+
+	/**
+	 * logs an info entry if we are in developer mode
+	 * 
+	 * @param tag
+	 * @param msg
+	 * @return
+	 */
+	public static int i(String tag, String msg) {
+		if (AppConstants.IS_DEV_MODE) {
+			return Log.i(tag, msg);
+		}
+		return 0;
+	}
+
+	public static int e(String tag, String msg, Throwable e) {
+		if (AppConstants.IS_DEV_MODE) {
+			return Log.e(tag, msg, e);
+		}
+		return 0;
+	}
+
+	public static int w(String tag, String msg) {
+		if (AppConstants.IS_DEV_MODE) {
+			return Log.w(tag, msg);
+		}
+		return 0;
+	}
+
+}
